--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,52 @@ body {
 .lead{
     bottom: 0px;
 }
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.42;
+  border-radius: 15px;
+}
+
+#contactbutton{
+    position: fixed;
+    bottom: 10px;
+    left: 5px;
+    z-index: 999;
+    opacity: 0.7;
+
+}
+#portfoliobutton{
+    position: fixed;
+    bottom: 50px;
+    left: 5px;
+    z-index: 999;
+    opacity: 0.7;
+}
+#resumebutton{
+    position: fixed;
+    bottom: 90px;
+    left: 5px;
+    z-index: 999;
+    opacity: 0.7;
+}
+#aboutbutton{
+    position: fixed;
+    bottom: 130px;
+    left: 5px;
+    z-index: 999;
+    opacity: 0.7;
+}
+#homebutton{
+    position: fixed;
+    bottom: 170px;
+    left: 5px;
+    z-index: 999;
+    opacity: 0.7;
+}
 
 .text-vertical-center {
     display: table-cell;
@@ -100,100 +146,6 @@ body {
 .btn-light:active {
     color: #333;
     background-color: rgba(255,255,255,0.8);
-}
-
-/* Custom Horizontal Rule */
-.headtitle{
-    color: #222D4F;
-}
-
-hr.small {
-    max-width: 100px;
-}
-
-/* Side Menu */
-
-#sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    right: 0;
-    width: 250px;
-    height: 100%;
-    margin-right: -250px;
-    overflow-y: auto;
-    background: #222;
-    -webkit-transition: all 0.4s ease 0s;
-    -moz-transition: all 0.4s ease 0s;
-    -ms-transition: all 0.4s ease 0s;
-    -o-transition: all 0.4s ease 0s;
-    transition: all 0.4s ease 0s;
-}
-
-.sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
-}
-
-.sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: #999;
-}
-
-.sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-    text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand {
-    height: 55px;
-    font-size: 18px;
-    line-height: 55px;
-}
-
-.sidebar-nav > .sidebar-brand a {
-    color: #999;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
-}
-
-#menu-toggle {
-    z-index: 1;
-    position: fixed;
-    top: 0;
-    right: 0;
-}
-
-#sidebar-wrapper.active {
-    right: 250px;
-    width: 250px;
-    -webkit-transition: all 0.4s ease 0s;
-    -moz-transition: all 0.4s ease 0s;
-    -ms-transition: all 0.4s ease 0s;
-    -o-transition: all 0.4s ease 0s;
-    transition: all 0.4s ease 0s;
-}
-
-.toggle {
-    margin: 5px 5px 0 0;
 }
 
 /* Header */
