--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
+    opacity: 0.9;
     background: url(../img/bg.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -170,7 +171,20 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    opacity: 0.9;
+    background-color: rgba(30,87,153,0) 0%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+#bg{
+    position: absolute;
+    width: 100%;
+    height: 150%;
+    opacity: 0.7;
+    background: url(../img/bin.png) no-repeat top left scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -184,10 +198,14 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
+    background-color: rgba(30,87,153,0) 0%;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+}
+#timeline{
+    background-color: rgba(30,87,153,0) 0%;
 }
 
 
@@ -198,8 +216,8 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-    opacity: 0.9;
-    background: url(../img/bk1.jpg) no-repeat center center scroll;
+    background-color: rgba(30,87,153,0) 0%;
+
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
